--- a/index.html
+++ b/index.html
@@ -142,13 +142,19 @@
             Feel free to reach out to me via email or LinkedIn. I'm always open
             to new opportunities and connections.
           </div>
-          <form>
+          <form action="https://formspree.io/f/mqedzapd" method="POST">
             <label for="name">Name</label>
-            <input type="text" id="name" />
+            <input type="text" id="name" name="name" required />
             <label for="email">Email</label>
-            <input type="email" id="email" />
+            <input type="email" id="email" name="email" required />
             <label for="message">Message</label>
-            <textarea id="message" cols="30" rows="10"></textarea>
+            <textarea
+              id="message"
+              name="message"
+              cols="30"
+              rows="10"
+              required
+            ></textarea>
             <button type="submit">Send Message</button>
           </form>
         </div>
