--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </a>
             <a href="#testimony">
               <i class="fa-solid fa-pen"></i>
-              <span>Testimony</span>
+              <span>My Journey</span>
             </a>
             <a href="#contact">
               <i class="fa-solid fa-envelope"></i>
