added in columbia football pic

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <div class="header-space"></div>
         <div class="group">
           <div class="person-details">
-            <img src="images/bailey_photo.webp" alt="bailey photo" />
+            <img src="images/columbia_football_pic.png" alt="bailey photo" />
             <p>Bailey K.D</p>
             <p>Columbia University</p>
           </div>
