Added in front and back buttons/ added to skills

--- a/index.html
+++ b/index.html
@@ -122,6 +122,19 @@
             <img src="images/sql_logo.png" alt="sql logo" />
             <span>SQL</span>
           </div>
+          <div class="cell">
+            <img src="images/java_logo.png" alt="java logo" />
+            <span>Java</span>
+          </div>
+          <div class="cell">
+            <img src="images/C_logo.png" alt="C logo" />
+            <span>C</span>
+          </div>
+        </div>
+        <div class="page-nav">
+          <a href="#" data-page="testimony" class="nav-link next-page">
+            My Journey <i class="fa-solid fa-arrow-right"></i>
+          </a>
         </div>
       </section>
 
@@ -143,6 +156,14 @@
             to pursue my passion in the tech industry. I'm looking forward to
             the future and what it holds!"
           </div>
+        </div>
+        <div class="page-nav">
+          <a href="#" data-page="skills" class="nav-link prev-page">
+            <i class="fa-solid fa-arrow-left"></i> Skills
+          </a>
+          <a href="#" data-page="contact" class="nav-link next-page">
+            Contact <i class="fa-solid fa-arrow-right"></i>
+          </a>
         </div>
       </section>
 
